// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurriculumVitae /> should render empty 1`] = `
.c2 {
  font-family: "IBM Plex Mono";
  font-weight: 700;
  grid-column-start: 3;
  font-size: 1.75rem;
  line-height: 2.25rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
  font-weight: 400;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c3 {
  list-style: none;
  position: relative;
}

.c3 >li:not(:first-child) {
  margin-top: 0.5rem;
}

.c0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
</div>
`;

exports[`<CurriculumVitae /> should render full 1`] = `
.c2 {
  font-family: "IBM Plex Mono";
  font-weight: 700;
  grid-column-start: 3;
  font-size: 1.75rem;
  line-height: 2.25rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
  font-weight: 400;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c4 {
  margin-left: 1.25rem;
}

.c4:before {
  color: rgb(0, 98, 114);
  content: "»";
  left: 0;
  position: absolute;
}

.c3 {
  list-style: none;
  position: relative;
}

.c3 >li:not(:first-child) {
  margin-top: 0.5rem;
}

.c0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        <span>
          Toimitilapalvelujen lautakunnan varajäsen
           
        </span>
        <i>
          Kirkkonummen kunta
           — 
          2023-
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Hallituksen varajäsen
           
        </span>
        <i>
          Kirkkonummen Vihreät
           — 
          2023-
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Länsi-Uudenmaan pelastuslaitos -liikelaitoksen johtokunnan varajäsen
           
        </span>
        <i>
          Länsi-Uudenmaan hyvinvointialue
           — 
          2022-
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Suomenkielisen kasvatus- ja koulutuslautakunnan varajäsen
           
        </span>
        <i>
          Kirkkonummen kunta
           — 
          2021-
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Perusturvajaoston jäsen
           
        </span>
        <i>
          Kirkkonummen kunta
           — 
          2021-2022
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          KV-kapteeni
           
        </span>
        <i>
          Informaatioverkostojen kilta Athene
           — 
          2015
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Hallituksen puheenjohtaja
           
        </span>
        <i>
          Aalto Predators
           — 
          2014-2015
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Hallituksen jäsen
           
        </span>
        <i>
          Aalto Predators
           — 
          2013
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Nuorisovaltuuston hallituksen puheenjohtaja
           
        </span>
        <i>
          Kirkkonummen kunta
           — 
          2010
        </i>
      </li>
    </ul>
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        <span>
          Team Lead
           
        </span>
        <i>
          Verkkokauppa.com
           (
          Helsinki
          ) — 
          2022-
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Software developer
           
        </span>
        <i>
          Verkkokauppa.com
           (
          Helsinki
          ) — 
          2019-2022
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Software developer
           
        </span>
        <i>
          Gofore
           (
          Helsinki
          ) — 
          2018-2019
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Software engineer
           
        </span>
        <i>
          Zalando
           (
          Helsinki
          ) — 
          2017-2018
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Software developer
           
        </span>
        <i>
          Futurice
           (
          Helsinki
          ) — 
          2015-2017
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Software developer
           
        </span>
        <i>
          Pulmaton Solutions Oy
           (
          Helsinki
          ) — 
          2014
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Seasonal trainee
           
        </span>
        <i>
          Nokia Solutions & Networks
           (
          Espoo
          ) — 
          2013
        </i>
      </li>
    </ul>
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        <span>
          Diplomi-insinööri (informaatioverkostot)
           
        </span>
        <i>
          Aalto-yliopisto
           (
          Espoo
          ) — 
          2012-2018
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Datanomi
           
        </span>
        <i>
          Omnia ammattiopisto
           (
          Kirkkonummi
          ) — 
          2007-2011
        </i>
      </li>
      <li
        class="c4"
      >
        <span>
          Ylioppilas
           
        </span>
        <i>
          Masalan lukio
           (
          Kirkkonummi
          ) — 
          2007-2011
        </i>
      </li>
    </ul>
  </div>
</div>
`;
